Add PGN parser tests and disambiguation fix (#448)